DSP-1154 Fix for feature header top align and cover image conflict

--- a/src/components/feature-header/_feature-header.scss
+++ b/src/components/feature-header/_feature-header.scss
@@ -194,6 +194,12 @@ $feature-header-button-hover-background: rgba($ds_colour__white, 20%) !default; 
                 }
             }
         }
+
+        &--top {
+            .ds_feature-header__secondary--cover {
+                align-self: unset;
+            }
+        }
     }
 
      // Button overrides
